--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <%- include("./partials/head") %>
     <title>HomePage</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include("./partials/navbar") %>
     <div class="container mt-3">
+      <div class="row row-cols-4">
         <% blogs.forEach(blog => { %>
-            <div class="card" style="width: 18rem;">
-                <img src="<%=blog.coverImageURL%>" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"><%=blog.title%></h5>
-                  <p class="card-text"><%=blog.body%></p>
-                  <a href="/blog/<%=blog._id%>" class="btn btn-primary">View</a>
-                </div>
-              </div>
+        <div class="card col" style="width: 18rem">
+          <img src="<%=blog.coverImageURL%>" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title"><%=blog.title%></h5>
+            <a href="/blog/<%=blog._id%>" class="btn btn-primary">View</a>
+          </div>
+        </div>
         <% }) %>
+      </div>
     </div>
-</body>
-    <%- include("./partials/scripts") %>
+  </body>
+  <%- include("./partials/scripts") %>
 </html>
