--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include("./partials/head") %>
-    <title>HomePage</title>
+    <title>HomePage2</title>
   </head>
   <body>
     <%- include("./partials/navbar") %>
