--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,7 +4,8 @@
     <%- include("./partials/head") %>
     <title>SIGN-IN</title>
 </head>
-<body>
+<link rel="stylesheet" href="/css/index.css">
+<body class="image">
     <%- include("./partials/navbar") %>
     <div class="container mt-3">
         <form action="/user/signin" method="post">
