--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -4,9 +4,10 @@
     <%- include("./partials/head") %>
     <title>HomePage</title>
 </head>
+<link rel="stylesheet" href="/css/index.css">
 <body>
     <%- include("./partials/navbar")%>
-    <div class="container mt-3"> 
+    <div class="container mt-3 image"> 
         <form action="/blog/add-new" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
