--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -4,7 +4,8 @@
     <%- include("./partials/head") %>
     <title>Blog</title>
 </head>
-<body>
+<link rel="stylesheet" href="/css/index.css">
+<body class="image">
     <%- include("./partials/navbar") %>
     <div class="container mt-4">
         <h1><%=blog.title%></h1>
